# ideaseed

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  callgraph  callgraph.dot  callgraph.treat.py  github.go  go.mod  go.sum  ideaseed.1  main.go  pyproject.toml  release.py
.github/: FUNDING.yml
.portfoliodb/: description.md
ideaseed/: authentication.py  cli.py  config.py  config_wizard.py  constants.py  dumb_utf8_art.py  git_bug.py  github.py  github_cards.py  gkeep.py  interactive_mode.py  ondisk.py  queyd.py  ui.py  update_checker.py  utils.py
