[tool.poetry]
name = "ideaseed"
version = "0.9.1"
description = "Note down your ideas and get them to the right place, without switching away from your terminal"
authors = ["Ewen Le Bihan <ewen.lebihan7@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ewen-lbh/ideaseed"

[tool.poetry.scripts]
ideaseed = "ideaseed.cli:run"

[tool.poetry.dependencies]
python = "^3.6"
pygithub = "^1.51"
gkeepapi = "^0.11.16"
docopt = "^0.6.2"
colr = "^0.9.1"
inquirer = "^2.7.0"
flatten-list = "^0.2.0"
cli-box = "^0.2.0"
semantic-version = "^2.8.5"
strip-ansi = "^0.1.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.5.3"
rope = "^0.17.0"
toml = "^0.10.1"
python-dotenv = "^0.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
